modified file structure and add some codes for edit feature

--- a/views/add-edit-idea.html
+++ b/views/add-edit-idea.html
@@ -12,7 +12,7 @@
         <button>Scrap Idea</button>
         <button>Done</button>
 
-    <script src="./app-functions.js"></script>
+    <script src="./functions/app-functions.js"></script>
     <script src="./app.js"></script>
 </body>
 </html>
