--- a/views/add-edit-idea.html
+++ b/views/add-edit-idea.html
@@ -8,11 +8,11 @@
 </head>
 <body>
         <input type="text" id="ideaTitle" placeholder="Idea Title">
-        <textarea name="" id="" cols="30" rows="10" placeholder="Idea Description"></textarea>
+        <textarea name="" id="ideaDescription" cols="30" rows="10" placeholder="Idea Description"></textarea>
         <button>Scrap Idea</button>
         <button>Done</button>
 
-    <script src="./functions/app-functions.js"></script>
-    <script src="./app.js"></script>
+    <script src="../functions/app-functions.js"></script>
+    <script src="../functions/edit.js"></script>
 </body>
 </html>
