added create and update time feature

--- a/views/add-edit-idea.html
+++ b/views/add-edit-idea.html
@@ -12,6 +12,7 @@
         <button>Scrap Idea</button>
         <button>Done</button>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
     <script src="../functions/app-functions.js"></script>
     <script src="../functions/edit.js"></script>
 </body>
