--- a/views/add-edit-idea.html
+++ b/views/add-edit-idea.html
@@ -9,8 +9,8 @@
 <body>
         <input type="text" id="ideaTitle" placeholder="Idea Title">
         <textarea name="" id="ideaDescription" cols="30" rows="10" placeholder="Idea Description"></textarea>
-        <button>Scrap Idea</button>
-        <button>Done</button>
+        <button id="deleteButton">Scrap Idea</button>
+        <button id="saveButton">Done</button>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
     <script src="../functions/app-functions.js"></script>
