modified add and edit feature

--- a/views/add.html
+++ b/views/add.html
@@ -11,11 +11,11 @@
 <body>
     <input type="text" id="ideaTitle" placeholder="Idea Title">
     <textarea name="" id="ideaDescription" cols="30" rows="10" placeholder="Idea Description"></textarea>
-    <button id="saveButton">Done</button>
+    <button id="homeButton">Done</button>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
     <script src="../functions/app-functions.js"></script>
-    <script src="../functions/edit.js"></script>
+    <script src="../functions/add.js"></script>
 </body>
 
 </html>
