--- a/views/edit.html
+++ b/views/edit.html
@@ -10,7 +10,7 @@
         <input type="text" id="ideaTitle" placeholder="Idea Title">
         <textarea name="" id="ideaDescription" cols="30" rows="10" placeholder="Idea Description"></textarea>
         <button id="deleteButton">Scrap Idea</button>
-        <button id="saveButton">Done</button>
+        <button id="homeButton">Done</button>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
     <script src="../functions/app-functions.js"></script>
