--- a/views/add.html
+++ b/views/add.html
@@ -13,9 +13,9 @@
     <div class="container">
         <h2>Add New Idea!</h2>
         <div class="content">
-            <input type="text" id="ideaTitle" placeholder="Idea Title">
+            <input type="text" id="ideaTitle" placeholder="Idea Title" autofocus/>
             <textarea name="" id="ideaDescription" cols="30" rows="10" placeholder="Idea Description"></textarea>
-            <button id="saveButton">Done</button>
+            <button id="saveButton" type="submit">Done</button>
         </div>
     </div>
 
